--- a/src/components/AppTable/_partials/TableHeader/TableHeader.module.scss
+++ b/src/components/AppTable/_partials/TableHeader/TableHeader.module.scss
@@ -8,6 +8,6 @@
     color: rgba(0, 0, 0, 1);
     font-size: 14px;
     line-height: 17.92px;
-    font-family: 'MailSansRomanSemiBold';
+    font-family: 'ManropeSemiBold';
   }
 }
