--- a/src/components/AppTable/_partials/TableBody/TableBody.module.scss
+++ b/src/components/AppTable/_partials/TableBody/TableBody.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
   border-bottom: 1px solid rgba(246, 246, 246, 1);
   &__even {
-    background-color: #f7f9fa;
+    background-color: #6f1f1318;
   }
   &__odd {
     background-color: white;
@@ -23,13 +23,6 @@
         display: flex !important;
         align-items: center;
       }
-    }
-    &__tableTooltip {
-      background-color: #001540 !important;
-      font-size: 14px !important;
-      padding: 8px 12px !important;
-      border-radius: 4px !important;
-      box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.05) !important;
     }
   }
   &__actions {
