--- a/src/screens/Dashboard/Flights/_partials/FlightsRecord/FlightsRecord.module.scss
+++ b/src/screens/Dashboard/Flights/_partials/FlightsRecord/FlightsRecord.module.scss
@@ -30,6 +30,15 @@
     width: fit-content;
   }
 
+  &__searchInput {
+    max-width: 600px;
+  }
+
+  &__tableActionBtn {
+    background: rgb(214, 2, 2) !important;
+    padding: 6px 20px;
+  }
+
   @media only screen and (min-width: 480px) {
     &__titleAndBtnWrapper {
       flex-direction: row;
